# fair-data-machine

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  r-packages.txt  supervisord.no-ollama.conf  tools.json
.github/workflows/: smoke-tests.yml
config/: components.json
custom-build/: Dockerfile  README.md  pyproject.toml  r-packages.txt  smoke-test.sh  supervisord.conf  test-image.sh
docs/: MAINTENANCE_GUIDE.md  OFFLINE.md  offline-artifact-transfer.md  offline-deployment.md  offline-local-registry.md  release-automation.md
profiles/: ai-r-workstation.json  baseline-workstation.json  r-workstation.json
scripts/deployment/: build-release-images.sh  export-release-artifacts.sh  import-release-artifacts.sh
scripts/runtime/: generator.py  start-postgres.sh
scripts/test/: smoke-test-addons.sh  smoke-test-image.sh  smoke-test-inner.sh
scripts/ui/: app.py
